feat(practice): Improve text rendering and cursor handling
- Add support for newline characters
- Adjust cursor visibility for newline characters
- Enhance whitespace rendering
- Add 'break' class for newline characters
- Remove unnecessary console.log statement
- Deleted the following gif files, due to large size:
	- Crystal Parallax.gif
	- Flow Field.gif
	- Sea Waves.gif
- Added the following audio files:
	- horror.mp3
	- jazz.mp3
	- motivation.mp3
	- purity.mp3
- Added the following svg file:
	- sparkles.svg

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,7 +43,16 @@ body {
   /* text-align: justify; */
   /* overflow: hidden; */
   /* line-height: 1.25em; */
-  line-height: 2em;
+  /* line-height: 2em; */
+}
+
+.break::before {
+	display: block;
+	position: relative;
+	content: '';
+	flex-basis: 100%;
+	width: 65vw;
+	height: 1em;
 }
 
 .char {
