--- a/src/views/lyrics/stats.ejs
+++ b/src/views/lyrics/stats.ejs
@@ -122,7 +122,7 @@
 	<!-- <img src="https://cdn-icons-png.flaticon.com/512/1047/1047711.png" alt="cookies-img" /> -->
 	<p class="favor" style="display: none"><i class="far fa-heart"></i> Add to favourites</p>
 	<button class="close-stats"><i class="fas fa-play-circle"></i>Continue</button>
-	<button onclick="location.reload()" class="replay" style="display: none"><i class="fas fa-reply"></i> Replay</button>
+	<button onclick="location.reload()" class="replay" style="display: none"><i class="fas fa-sync-alt"></i> Replay</button>
 	<!-- <a href="/">Go Home <i class="fas fa-home"></i></a> -->
 	<a href="/browse">Change Music <i class="fas fa-music"></i></a>
 </div>
