--- a/public/css/practice.css
+++ b/public/css/practice.css
@@ -3,6 +3,7 @@
 }
 
 .container {
+	z-index: 1000;
 }
 
 .practice-text {
@@ -23,7 +24,8 @@
 *::-webkit-scrollbar-track {
 	color: transparent;
 	border-radius: 8px;
-	background-image: url("https://i.ibb.co/5150925/tracks.png");
+	background-color: #1f212222;
+	/* background-image: url("https://i.ibb.co/5150925/tracks.png"); */
 	background-position: -5px;
 	background-repeat: repeat-y;
 	background-size: 50px;
@@ -31,9 +33,59 @@
 
 *::-webkit-scrollbar-thumb {
 	color: transparent;
-    border-radius: 8px;
+	border-radius: 8px;
   background-image: url("https://i.ibb.co/q95CBdZ/train.png");
     background-position:center center;
     background-repeat: no-repeat;
     background-size: 35px;
+		cursor: grab;
+		opacity: 0.5;
+	}
+	
+	*::-webkit-scrollbar-thumb:active {
+	cursor: grabbing;
+
+}
+
+.char {
+  /* font-size: 24px; */
+  font-size: 25px;
+  /* font-size: 2rem; */
+}
+
+.cursor, .break-cursor {
+  /* color: red; */
+  font-weight: 600;
+  /* position: relative; */
+  /* font-size: 28px; */
+  /* transform: scale(1.25); */
+  /* letter-spacing: 5px; */
+
+  text-align: center;
+  text-decoration: double;
+  /* opacity: 0.8; */
+  /* color: #fff; */
+	padding-left: 3px;
+  color: #ffb02edd;
+}
+
+.cursor::after{
+  opacity: 0.9;
+  color: #ffb02e;
+  content: "_";
+  content: " ";
+	width: 100%;
+	/* height: 100%; */
+	padding: 0.5em 0.1em;
+	border: 2px solid #ffb02e;
+  display: block;
+  position: absolute;
+  left: 55%;
+  top: 2px;
+  transform: translateX(-50%);
+}
+
+
+.done {
+  color: #70ee27ad;
 }
