--- a/src/views/practice/stats.ejs
+++ b/src/views/practice/stats.ejs
@@ -20,6 +20,7 @@
 		/* background-color: #fff; */
 		/* background-color: #1f2122; */
 		background-color: #1f2122aa;
+		background-color: #1f2122dd;
 		color: #fffd;
 		text-align: center;
 		border-radius: 20px;
@@ -95,6 +96,8 @@
 	}
 
 	.close-stats, button.replay {
+		position: relative;
+		margin: auto;
 		display: flex;
 		justify-content: center;
 		align-items: center;
@@ -104,9 +107,13 @@
 	}
 
 	.stats-content a {
+		position: relative;
+		display: block;
+		width: 100%;
+		margin: auto;
 		color: #5e8de7;
 		text-decoration: none;
-		margin-top: 1.5em;
+		margin-top: 1.5em !important;
 		font-weight: bold;
 		transition: color 0.5s;
 	}
@@ -122,7 +129,7 @@
 	<!-- <img src="https://cdn-icons-png.flaticon.com/512/1047/1047711.png" alt="cookies-img" /> -->
 	<p class="favor" style="display: none"><i class="far fa-heart"></i> Add to favourites</p>
 	<button class="close-stats"><i class="fas fa-play-circle"></i>Continue</button>
-	<button onclick="location.reload()" class="replay" style="display: none"><i class="fas fa-sync-alt"></i> Replay</button>
+	<button class="replay" style="display: none"><i class="fas fa-sync-alt"></i> Replay</button>
 	<!-- <a href="/">Go Home <i class="fas fa-home"></i></a> -->
-	<a href="/browse">Change Music <i class="fas fa-music"></i></a>
+	<a href="/practice">Change Text <i class="fas fa-paragraph"></i></a>
 </div>
