--- a/src/views/dashboard/index.ejs
+++ b/src/views/dashboard/index.ejs
@@ -1,12 +1,270 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Dashboard</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+		rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+		integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
+	<link rel="stylesheet" href="/css/dashboard.css">
+	<style>
+		body {
+			font-size: 0.875rem;
+		}
+
+		.sidebar {
+			height: 100vh;
+			background-color: #343a40;
+			color: #fff;
+			padding: 1rem;
+		}
+
+		.sidebar a {
+			color: #fff;
+			text-decoration: none;
+		}
+
+		.sidebar a:hover {
+			text-decoration: none;
+			background-color: #495057;
+			border-radius: .25rem;
+		}
+
+		.content {
+			padding: 2rem;
+		}
+
+		.navbar-dark .navbar-nav .nav-link {
+			color: #fff;
+		}
+
+		.navbar-dark .navbar-nav .nav-link:hover {
+			color: #ddd;
+		}
+	</style>
 </head>
+
 <body>
-	<a href="/dashboard/users">Users</a>
-	<a href="/dashboard/musics">Musics</a>
+
+	<div class="container-fluid">
+		<div class="row">
+			<!-- Sidebar -->
+			<!-- Sidebar -->
+			<!-- Sidebar -->
+			<!-- Sidebar -->
+			<!-- Sidebar -->
+			<!-- Sidebar -->
+			<nav class="col-md-2 d-none d-md-block sidebar">
+				<div class="top-left text-center">
+					<img src="/assets/images/logo.png" alt="logo" class="img-fluid rounded-circle">
+					<h5 class="mt-2">Funkey | Dashboard</h5>
+				</div>
+				<hr>
+				<form class="form-inline my-2 my-lg-0" style="display: none">
+					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+				</form>
+				<ul class="nav flex-column">
+					<li class="nav-item">
+						<a class="nav-link active" href="/dashboard">Overview</a>
+					</li>
+					<!-- Accordion -->
+					<li class="nav-item">
+						<div id="accordion">
+							<div class="card border-0">
+								<div class="card-header border-0 p-0">
+									<h5 class="mb-0">
+										<button class="btn btn-link text-white" data-toggle="collapse" data-target="#collapseOne"
+											aria-expanded="true" aria-controls="collapseOne">
+											&nbsp;Dashboards <i class="fas fa-caret-down"></i>
+										</button>
+									</h5>
+								</div>
+								<div id="collapseOne" class="collapse dashboards" aria-labelledby="headingOne" data-parent="#accordion">
+									<div class="card-body p-0">
+										<ul class="nav flex-column">
+											<li class="nav-item">
+												<a class="nav-link" href="/dashboard/users"><i class="fas fa-users"></i> &nbsp; User
+													Dashboard</a>
+											</li>
+											<li class="nav-item">
+												<a class="nav-link" href="/dashboard/musics"><i class="fas fa-music"></i>&nbsp;&nbsp; Music
+													Dashboard</a>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Analytics</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Settings</a>
+					</li>
+				</ul>
+
+				<hr>
+
+				<h5 class="mt-4 quick-links">&nbsp;Quick Links</h5>
+				<ul class="nav flex-column quick-links-container">
+					<li class="nav-item">
+						<a class="nav-link" href="/browse">Browse Musics</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/practice">practice Typing</a>
+					</li>
+				</ul>
+
+			</nav>
+
+
+
+
+
+			<!-- Main content -->
+			<main role="main" class="col-md-10 ml-sm-auto px-4 content" style="padding: 0;">
+				<!-- Dashboard Navbar -->
+				<div
+					class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom"
+					style="position: relative;">
+					<h1 class="h2">Dashboard Overview</h1>
+					<div class="dropdown">
+						<span class="profile-pic" data-toggle="dropdown" aria-expanded="false"></span>
+						<div class="dropdown-menu" style="margin: auto; margin-right: 5rem;">
+							<a class="dropdown-item" href="#"><i class="fas fa-user-circle"></i> Profile</a>
+							<a class="dropdown-item" href="#"><i class="fas fa-cog"></i> Settings</a>
+							<a class="dropdown-item" href="#">Logout <i class="fas fa-sign-out-alt"></i></a>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="stats-container-row">
+					<div class="stats-container">
+						<div class="column">
+							<i class="fas fa-users"></i>
+						</div>
+						<div class="column">
+							<span class="stats-count">500</span>
+							<span class="stats-caption">Users</span>
+						</div>
+					</div>
+					
+					<div class="stats-container">
+						<div class="column">
+							<i class="bi bi-music-note-list"></i>
+						</div>
+						<div class="column">
+							<span class="stats-count">350</span>
+							<span class="stats-caption">Musics</span>
+						</div>
+					</div>
+
+					<div class="stats-container">
+						<div class="column">
+							<i class="fas fa-cloud-upload-alt"></i>
+						</div>
+						<div class="column">
+							<span class="stats-count">520</span>
+							<span class="stats-caption">Uploads</span>
+						</div>
+					</div>
+				</div>
+
+
+				<hr>
+
+				<div class="tables-container">
+					<table class="table table-striped" style="width: 40%; display: block;">
+						<thead style="border-radius: 23px;">
+							<tr>
+								<th colspan="4" style="text-align: center; border-top: none; font-size: 1.25rem;">
+									Popular Musics
+								</th>
+							</tr>
+							<tr class="thead-dark">
+								<th scope="col">Cover</th>
+								<th scope="col">Music</th>
+								<th scope="col">Rating</th>
+								<th scope="col">Views</th>
+							</tr>
+						</thead>
+					<tbody>
+						<tr>
+							<td class="align-middle thumbnail-container" scope="row"><span class="thumbnail"></span></td>
+							<td class="align-middle">Ed Sheeran <br> Perfect</td>
+							<td class="align-middle">4.5</td>
+							<td class="align-middle">2 M</td>
+						</tr>
+						<tr>
+							<td class="align-middle" scope="row"><span class="thumbnail"></span></td>
+							<td class="align-middle">Adele <br> Rolling in the Deep</td>
+							<td class="align-middle">4.3</td>
+							<td class="align-middle">1.5 M</td>
+						</tr>
+						<tr>
+							<td class="align-middle" scope="row"><span class="thumbnail"></span></td>
+							<td class="align-middle">Michael Bubble <br> Feeling Good</td>
+							<td class="align-middle">4.3</td>
+							<td class="align-middle">1.2 M</td>
+						</tr>
+					</tbody>
+				</table>
+				
+				<table class="table table-striped users-table" style="width: 40%; display: block;">
+					<thead style="border-radius: 23px;">
+						<tr>
+							<th colspan="4" style="text-align: center; border-top: none; font-size: 1.25rem;">
+								Top Users
+							</th>
+						</tr>
+						<tr class="thead-dark">
+							<th scope="col">Avatar</th>
+							<th scope="col">Name</th>
+							<th scope="col">Hours</th>
+							<th scope="col">Score</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td class="align-middle thumbnail-container" scope="row"><span class="thumbnail"></span></td>
+							<td class="align-middle">Ed Sheeran <br> Perfect</td>
+							<td class="align-middle">4.5</td>
+							<td class="align-middle">2 M</td>
+						</tr>
+						<tr>
+							<td class="align-middle" scope="row"><span class="thumbnail"></span></td>
+							<td class="align-middle">Adele <br> Rolling in the Deep</td>
+							<td class="align-middle">4.3</td>
+							<td class="align-middle">1.5 M</td>
+						</tr>
+						<tr>
+							<td class="align-middle" scope="row"><span class="thumbnail"></span></td>
+							<td class="align-middle">Michael Bubble <br> Feeling Good</td>
+							<td class="align-middle">4.3</td>
+							<td class="align-middle">1.2 M</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+
+			</main>
+		</div>
+	</div>
+	
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
