--- a/src/views/dashboard/users.ejs
+++ b/src/views/dashboard/users.ejs
@@ -4,14 +4,56 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Users</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
-		integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+	<title>Dashboard | Users</title>
+	<link rel="shortcut icon" href="/assets/icon/logo.ico" type="image/x-icon">
+
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
 		integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-	<link rel="stylesheet" href="/css/toasts.css">
+
+	<link rel="stylesheet" href="/css/dashboard.css">
+	<style>
+		body {
+			font-size: 0.875rem;
+		}
+
+		.sidebar {
+			height: 100vh;
+			background-color: #343a40;
+			color: #fff;
+			padding: 1rem;
+			position: fixed;
+		}
+
+		.sidebar a {
+			color: #fff;
+			text-decoration: none;
+		}
+
+		.sidebar a:hover {
+			text-decoration: none;
+			background-color: #495057;
+			border-radius: .25rem;
+		}
+
+		.content {
+			padding: 2rem;
+		}
+
+		.navbar-dark .navbar-nav .nav-link {
+			color: #fff;
+		}
+
+		.navbar-dark .navbar-nav .nav-link:hover {
+			color: #ddd;
+		}
+	</style>
 
 	<style>
 		.delete-btn {
@@ -66,101 +108,187 @@
 			margin: auto;
 		}
 	</style>
+	<link rel="stylesheet" href="/css/toasts.css">
 </head>
 
 <body>
-	<div class="container mt-5">
-		<div class="row mb-4">
-			<div class="col">
-				<h1 class="text-center">User Management Dashboard</h1>
-			</div>
-		</div>
 
+	<div class="container-fluid">
 		<div class="row">
-			<div class="col">
-				<table class="table">
-					<thead class="thead-dark">
-						<tr>
-							<th scope="col">#</th>
-							<th scope="col">Username</th>
-							<th scope="col">Email</th>
-							<th scope="col" class="text-truncate password">Password</th>
-							<th scope="col">Avatar</th>
-							<th scope="col">Delete</th>
-						</tr>
-					</thead>
-					<tbody id="usersTableBody">
-						<% let ordinalNo=0; %>
-							<% users.forEach((user, index)=> { %>
-								<% ordinalNo=index + 1; %>
-									<tr id="<%= user._id %>">
-										<th scope="row" class="ordinal">
-											<%= index + 1 %>
+			<!-- Sidebar -->
+			<!-- Sidebar -->
+			<!-- Sidebar -->
+			<!-- Sidebar -->
+			<!-- Sidebar -->
+			<!-- Sidebar -->
+			<nav class="col-md-2 d-none d-md-block sidebar">
+				<div class="top-left text-center">
+					<img src="/assets/images/logo.png" onclick="location.href = '/'" style="cursor: pointer;" alt="logo" class="img-fluid rounded-circle">
+					<h5 class="mt-2">Dashboard | Users</h5>
+				</div>
+				<hr>
+				<form class="form-inline my-2 my-lg-0" style="display: none">
+					<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+				</form>
+				<ul class="nav flex-column">
+					<li class="nav-item">
+						<a class="nav-link active" href="/dashboard">Overview</a>
+					</li>
+					<!-- Accordion -->
+					<li class="nav-item">
+						<div id="accordion">
+							<div class="card border-0">
+								<div class="card-header border-0 p-0">
+									<h5 class="mb-0">
+										<button class="btn btn-link text-white" data-toggle="collapse" data-target="#collapseOne"
+											aria-expanded="true" aria-controls="collapseOne">
+											&nbsp;Dashboards <i class="fas fa-caret-down"></i>
+										</button>
+									</h5>
+								</div>
+								<div id="collapseOne" class="collapse dashboards" aria-labelledby="headingOne" data-parent="#accordion">
+									<div class="card-body p-0">
+										<ul class="nav flex-column">
+											<li class="nav-item">
+												<a class="nav-link" href="/dashboard/users"><i class="fas fa-users"></i> &nbsp; User
+													Dashboard</a>
+											</li>
+											<li class="nav-item">
+												<a class="nav-link" href="/dashboard/musics"><i class="fas fa-music"></i>&nbsp;&nbsp; Music
+													Dashboard</a>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Analytics</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Settings</a>
+					</li>
+				</ul>
+
+				<hr>
+
+				<h5 class="mt-4 quick-links">&nbsp;Quick Links</h5>
+				<ul class="nav flex-column quick-links-container">
+					<li class="nav-item">
+						<a class="nav-link" href="/browse">Browse Musics</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/practice">practice Typing</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/piano">Piano Typing</a>
+					</li>
+				</ul>
+
+			</nav>
+
+
+
+
+
+			<!-- Main content -->
+			<main role="main" class="col-md-10 ml-sm-auto px-4 content" style="padding: 0;">
+				<!-- Dashboard Navbar -->
+				<div
+					class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom"
+					style="position: relative;">
+					<h1 class="h2">Dashboard Overview</h1>
+					<div class="dropdown">
+						<span class="profile-pic" data-toggle="dropdown" aria-expanded="false"></span>
+						<div class="dropdown-menu" style="margin: auto; margin-right: 5rem;">
+							<a class="dropdown-item" href="#"><i class="fas fa-user-circle"></i> Profile</a>
+							<a class="dropdown-item" href="#"><i class="fas fa-cog"></i> Settings</a>
+							<a class="dropdown-item" href="#">Logout <i class="fas fa-sign-out-alt"></i></a>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="users-table" style="width: 100%;">
+					<div class="col">
+						<table class="table">
+							<thead class="thead-dark">
+								<tr>
+									<th scope="col">#</th>
+									<th scope="col">Username</th>
+									<th scope="col">Email</th>
+									<th scope="col">Avatar</th>
+									<th scope="col">Delete</th>
+								</tr>
+							</thead>
+
+							<!-- Add Users -->
+							<tbody class="add-row">
+								<tr>
+									<th scope="row">$</th>
+									<th><input type="text" name="name" placeholder="username"></th>
+									<th><input type="email" name="email" placeholder="email"></th>
+									<th class="avatar-container">
+										<button class="btn btn-secondary"><i class="fas fa-user-circle"></i></button>
+										<input type="file" style="display: none">
+										<input type="hidden" name="avatar" value="">
+									</th>
+									<th><button class="btn btn-primary"><i class="fas fa-user-plus"></i></button></th>
+								</tr>
+							</tbody>
+
+							<!-- Fake Users -->
+							<tbody class="fake-users">
+								<tr>
+									<form id="fakeUsersForm">
+										<th scope="row">$</th>
+										<th>Generate</th>
+										<th>Users</th>
+										<th class="avatar-container">
+											<input type="number" class="form-control" id="numberOfUsers" placeholder="🤖" min="1">
 										</th>
-										<td>
-											<%= user.name %>
-										</td>
-										<td>
-											<%= user.email %>
-										</td>
-										<td class="text-truncate password">
-											<%= user.password %>
-										</td>
-										<% let avatar=user.avatar; %>
-											<!-- TODO: Remove this 👇 -->
-											<% avatar=!avatar.startsWith('https') ? '/' + avatar : avatar; %>
-												<td class="avatar-container"><img src="<%= avatar %>" class="avatar"></td>
-												<td><i data-id="<%= user._id %>" class="fas fa-trash-alt delete-btn"></i></td>
-									</tr>
-									<% }); %>
-					</tbody>
-					<tbody class="add-row">
-						<tr>
-							<th scope="row">$</th>
-							<th><input type="text" name="name" placeholder="username"></th>
-							<th><input type="email" name="email" placeholder="email"></th>
-							<th><input type="password" name="password" placeholder="password"></th>
-							<th class="avatar-container">
-								<button class="btn btn-secondary"><i class="fas fa-user-circle"></i></button>
-								<input type="file" style="display: none">
-								<input type="hidden" name="avatar" value="">
-							</th>
-							<th><button class="btn btn-primary"><i class="fas fa-user-plus"></i></button></th>
-						</tr>
-					</tbody>
-					<tbody class="fake-users">
-						<tr>
-							<form id="fakeUsersForm">
-								<th scope="row">$</th>
-								<th>Generate</th>
-								<th>Fake</th>
-								<th>Users</th>
-								<th class="avatar-container">
-									<input type="number" class="form-control" id="numberOfUsers" placeholder="🤖" min="1">
-								</th>
-								<th><button class="btn btn-warning"><i class="fas fa-user-secret"
-											style="font-size: 1.5rem;"></i></button>
-								</th>
-							</form>
-						</tr>
-					</tbody>
-				</table>
-			</div>
+										<th><button class="btn btn-warning"><i class="fas fa-user-secret"
+													style="font-size: 1.5rem;"></i></button>
+										</th>
+									</form>
+								</tr>
+							</tbody>
+
+							<!-- users -->
+							<tbody id="usersTableBody">
+								<% let ordinalNo=0; %>
+									<% users.forEach((user, index)=> { %>
+										<% ordinalNo=index + 1; %>
+											<tr id="<%= user._id %>">
+												<th scope="row" class="ordinal">
+													<%= index + 1 %>
+												</th>
+												<td>
+													<%= user.name %>
+												</td>
+												<td>
+													<%= user.email %>
+												</td>
+													<!-- TODO: Remove this 👇 -->
+													<td class="avatar-container"><img src="<%= user.avatar %>" class="avatar"></td>
+													<td><i data-id="<%= user._id %>" class="fas fa-trash-alt delete-btn"></i></td>
+											</tr>
+											<% }); %>
+							</tbody>
+						</table>
+					</div>
+				</div>
+
+
+			</main>
 		</div>
 	</div>
 
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-	<br><br><br><br><br><br><br><br>
-
-	<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-		</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-		integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
-		</script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js"
-		integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous">
-		</script>
 
 	<script src="/js/toasts.js"></script>
 	<script src="/js/affirm.js"></script>
@@ -255,6 +383,7 @@
 			}
 		});
 	</script>
+
 </body>
 
 </html>
