--- a/src/views/dashboard/musics.ejs
+++ b/src/views/dashboard/musics.ejs
@@ -16,6 +16,7 @@
 		integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+	<link rel="stylesheet" href="/css/upload.css">
 	<link rel="stylesheet" href="/css/dashboard.css">
 	<style>
 		body {
@@ -96,6 +97,56 @@
 			color: #e75e86;
 			font-size: 1rem;
 		}
+
+		.upload-modal .upload-container {
+			background-color: #f7f7f7;
+			position: fixed;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+
+			width: 700px;
+			display: flex;
+			flex-direction: column !important;
+			gap: 1em;
+			justify-content: center;
+			align-items: center;
+			color: #1f2122 !important;
+		}
+
+		.upload-modal .upload-header {
+			background-color: transparent;
+			color: #1f2122;
+			border-color: #5e8de720 !important;
+			font-size: 1.5rem;
+			font-weight: normal;
+			width: 100%;
+			text-align: left;
+			padding-left: 1em;
+		}
+
+		.upload-container input,
+		.upload-container input:focus {
+			background-color: #f7f7f7;
+			border-color: #f1f1f1;
+			color: #1f2122;
+		}
+
+		.drag-drop {
+			color: #575757;
+		}
+
+		.modal-header {
+			display: flex;
+			flex-direction: row;
+			flex-wrap: nowrap;
+			align-items: center;
+		}
+
+		.modal-header .modal-title {
+			font-size: 1.5rem;
+			/* font-weight: bold; */
+		}
 	</style>
 	<link rel="stylesheet" href="/css/toasts.css">
 </head>
@@ -112,7 +163,8 @@
 			<!-- Sidebar -->
 			<nav class="col-md-2 d-none d-md-block sidebar">
 				<div class="top-left text-center">
-					<img onclick="location.href = '/'" style="cursor: pointer;" src="/assets/images/logo.png" alt="logo" class="img-fluid rounded-circle">
+					<img onclick="location.href = '/'" style="cursor: pointer;" src="/assets/images/logo.png" alt="logo"
+						class="img-fluid rounded-circle">
 					<h5 class="mt-2">Dashboard | Musics</h5>
 				</div>
 				<hr>
@@ -199,6 +251,11 @@
 				</div>
 
 
+				<div style="width: 100%; padding: 1em 0;">
+					<button style="margin-left: 1em;" class="btn btn-primary" data-toggle="modal" data-target="#uploadModal"><i
+							class="fas fa-cloud-upload-alt"></i> Upload</button>
+				</div>
+
 				<div class="musics-table" style="width: 100%;">
 					<div class="col">
 						<table class="table">
@@ -274,6 +331,12 @@
 		</div>
 	</div>
 
+	<div class="modal fade upload-modal" tabindex="-1" id="uploadModal" aria-labelledby="uploadModalLabel"
+		aria-hidden="true">
+		<%- include('upload.ejs') %>
+	</div>
+
+
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
@@ -281,12 +344,13 @@
 
 	<script src="/js/toasts.js"></script>
 	<script src="/js/affirm.js"></script>
+	<script src="/js/upload.js" defer></script>
 
 	<script>
 		$(document).ready(function () {
 			console.clear();
 			console.log('Hey there');
-			toastSuccess("Users loaded successfully!");
+			toastSuccess("Musics loaded successfully!");
 
 			// Function to update the ordinal numbers
 			function updateOrdinalNumbers() {
