--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -160,6 +160,13 @@
 			z-index: 1000;
 		}
 
+		.login {
+			padding: 0 !important;
+			height: 1em !important;
+			line-height: 1.2 !important;
+			margin-top: 0.5em;
+		}
+
 	</style>
 
 </head>
@@ -206,7 +213,7 @@
 				<li><a href="/practice">Practice</a></li>
 				<li><a href="/piano">Piano</a></li>
 				<% if (!avatar) { %>
-					<li><a href="/login" class="active">Login</a></li>
+					<li class="login"><a href="/login" class="active">Login</a></li>
 				<% } else { %>
 						<li><a href="/profile">Profile <span class="profile-pic-cont"><img class="profile-pic" src="<%= avatar %>" alt=""></span></a></li>
 				<% } %>
