feat: Refactor user authentication with passport-local and add tos page
- Commented out session checks in renderLogin to improve code clarity
- Refactored handleSignup to directly destructure req.body
- Removed handleLogin function, simplifying the codebase
- Included the terms and conditions modal in the frontend:

--- a/public/css/funkey.css
+++ b/public/css/funkey.css
@@ -977,6 +977,17 @@ Gaming Library Style
 	text-align: center;
 }
 
+.view-library-btn a {
+	font-family: 'Poppins', sans-serif;
+	/* font-weight: bold; */
+	font-size: 1rem;
+	padding: 0.5em 1em;
+}
+
+.view-library-btn a:hover {
+	background-color: #639aeb99 !important;
+	color: #ffffffcc !important;
+}
 /* 
 ---------------------------------------------
 Footer Style
