--- a/src/views/dashboard/upload.ejs
+++ b/src/views/dashboard/upload.ejs
@@ -33,7 +33,7 @@
 	<form id="upload-form" class="upload-container modal-content">
 		<div class="upload-header modal-header">
 			<h5 class="upload-title modal-title" id="uploadModalLabel">Upload Music 🎧</h5>
-			<i onclick="$('#uploadModal').modal('hide')" class="bi bi-x-octagon text-danger" type="button"
+			<i onclick="$('#practiceModal').modal('hide')" class="bi bi-x-octagon text-danger" type="button"
 				data-bs-dismiss="modal" aria-label="Close"></i>
 		</div>
 		<div class="upload-body modal-body">
