--- a/src/views/browse.ejs
+++ b/src/views/browse.ejs
@@ -122,7 +122,8 @@
 				<% if (!avatar) { %>
 					<li class="login"><a href="/login" class="active">Login</a></li>
 					<% } else { %>
-						<li><a href="/profile">Profile <span class="profile-pic-cont"><img class="profile-pic" src="<%= avatar %>" alt=""></span></a></li>
+						<li><a href="/profile">Profile <span class="profile-pic-cont"><img class="profile-pic" src="<%= avatar %>"
+										alt=""></span></a></li>
 						<% } %>
 							<!-- <li><a href="profile.html">Login <img src="assets/images/logo.png" alt=""></a></li> -->
 			</ul>
@@ -248,9 +249,11 @@
 							</div>
 						</div>
 						<div class="col-lg-12">
-							<div class="main-button view-library-btn">
-								<a href="/">View Your Library</a>
-							</div>
+							<div class="d-flex align-items-center my-4" style="margin: auto; width: 90%; display: none">
+								<hr class="flex-grow-1" style="border-color: #57575722;">
+								<span class="mx-3"><a class="btn btn-secondary" style="background-color: #5e8de7; border: none; border-radius: 23px;" href="/profile">View Your Library</a></span>
+								<hr class="flex-grow-1" style="border-color: #57575722;">
+							</div>			
 						</div>
 					</div>
 					<!-- ***** Gaming Library End ***** -->
