--- a/src/views/piano/piano.ejs
+++ b/src/views/piano/piano.ejs
@@ -4,7 +4,8 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Funkey | Piano</title>
+	<title>Funkey | Piano Typing</title>
+	<link rel="shortcut icon" href="/assets/icon/funkey.ico" type="image/x-icon">
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
 		integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
